--- a/pdf_processing/pdf_processing_git.yml
+++ b/pdf_processing/pdf_processing_git.yml
@@ -5,13 +5,13 @@ resources:
       tasks:
         - task_key: pdf_to_txt
           spark_python_task:
-            python_file: src/pipelines/pdf_processing/pdf_to_text_with_pymupdf4llm.py
+            python_file: pdf_processing/src/pipelines/pdf_processing/pdf_to_text_with_pymupdf4llm.py
             parameters:
               - --source_path
-              - "{{job.parameters.base_path}}/pdf/source={{job.parameters.sourc\
+              - "{{job.parameters.base_path}}raw_pdf/{{job.parameters.sourc\
                 e_name}}/"
               - --target_path
-              - "{{job.parameters.base_path}}/txt/source={{job.parameters.sourc\
+              - "{{job.parameters.base_path}}raw_txt/{{job.parameters.sourc\
                 e_name}}/"
             source: GIT
           environment_key: dev
@@ -19,10 +19,10 @@ resources:
           depends_on:
             - task_key: pdf_to_txt
           spark_python_task:
-            python_file: src/pipelines/pdf_processing/text_to_columns.py
+            python_file: pdf_processing/src/pipelines/pdf_processing/text_to_columns.py
             parameters:
               - --source_path
-              - "{{job.parameters.base_path}}/txt/source={{job.parameters.sourc\
+              - "{{job.parameters.base_path}}raw_txt/{{job.parameters.sourc\
                 e_name}}/"
               - --target_table
               - "{{job.parameters.loads_table}}"
@@ -32,23 +32,23 @@ resources:
           depends_on:
             - task_key: txt_to_columns
           spark_python_task:
-            python_file: src/pipelines/pdf_processing/text_to_columns_validator.py
+            python_file: pdf_processing/src/pipelines/pdf_processing/text_to_columns_validator.py
             parameters:
               - --source_table
               - "{{job.parameters.loads_table}}"
             source: GIT
           environment_key: dev
       git_source:
-        git_url: https://github.com/danipilze/pdf_processing.git
+        git_url: https://github.com/arlexpin/TallerSpark.git
         git_provider: gitHub
-        git_branch: dev
+        git_branch: main
       queue:
         enabled: true
       parameters:
         - name: base_path
-          default: /Volumes/logistics/bronze/raw
+          default: /Volumes/logistics/bronze/
         - name: source_name
-          default: UTB
+          default: source=UTB
         - name: loads_table
           default: logistics.bronze.truckr_loads
       environments:
